QuickMessage: bring back mark as read
Squash of:
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/54462d03f211294e2831cecc46291ed63f94c858
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/d610689b8d69309aeadd82c64fec86f32fd150b0
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/77b6ea1ab78632557ddc227eff8b12c32b829c8a
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/8af6a0fa9c092b3b9c2f3a984216fe44ad160de4
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/adf6c597d0f562cf0e6ee83216b1ab76b9c8824c
https://github.com/CyanogenMod/android_packages_apps_Mms/commit/7afe23ff0f953e46891253b15fc3918b80195c28

Slight change in MessagingNotification.java under L115
private -> public for NOTIFICATION_ID = 123

Icon probably needs material redesign and other resolutions, but wanted to
push this so you guys can finish it up as CM likes to do.

What I've tested, it works just fine

Also setting author as DvTonder

Change-Id: Ic7d4de9c337436b288e3b570da5f1958cd14abb4
Vanir-Merging-by: DHOMD <DHO@dho.im>
Conflicts:
	AndroidManifest.xml
	src/com/android/mms/transaction/MessagingNotification.java

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -465,6 +465,10 @@
 
         <receiver android:name=".quickmessage.ClearAllReceiver" />
 
+        <receiver
+            android:name=".quickmessage.QmMarkRead"
+            android:exported="true" />
+
         <!-- Message Template Content Provider -->
         <provider android:name="MessageTemplateProvider"
                 android:authorities="com.android.mms.MessageTemplateProvider" />
